# ansible-role-atomic-red-team

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
defaults/: main.yml
meta/: main.yml
tasks/: main.yml  setup-linux.yml
