[project]
name = "ansible-role-atomic-red-team"
description = "Atomic Red Team role of AlnPir"
version = "1.0.0"
authors = [{ name = "Alan PIERRE", email = "alan.pierre@proton.me" }]

dependencies = [
    "ansible",
    "ansible-lint"
    ]

[project.optional-dependencies]
dev = [
    "pre-commit",
    ]

[tool.setuptools]
py-modules = []
